--- a/src/statics/css/default.css
+++ b/src/statics/css/default.css
@@ -754,3 +754,23 @@ section#career .sc__title::before {
         }
     }
 }
+
+.cont__menu.open .nav__list .nav-item {
+    position: relative;
+}
+
+.cont__menu.open .nav__list .nav-item:before {
+    content: '';
+    position: absolute;
+    bottom: -2px;
+    left: 50%;         /* 시작 위치를 중앙으로 변경 */
+    transform: translateX(-50%);  /* 정확한 중앙 정렬 */
+    width: 0;          /* 초기 너비 0 */
+    height: 2px;
+    background-color: var(--text-em);
+    transition: width 0.3s ease;  /* width 변화에 transition 추가 */
+}
+
+.cont__menu.open .nav__list .nav-item:hover:before {
+    width: 60%;      /* hover 시 전체 너비로 확장 */
+}
