--- a/src/statics/css/header.css
+++ b/src/statics/css/header.css
@@ -48,28 +48,28 @@ nav .nav__list {
   padding-inline-start: 1rem;
   text-align: right;
 }
-nav .nav__list a {
+/* nav .nav__list a {
   margin: 0;
   padding: 0;
   font-size: calc(1.4rem);
   text-decoration: none;
-}
-nav .nav__list a:hover {
+} */
+/* nav .nav__list a:hover {
   color: var(--text-em);
   transition: var(--transition);
-}
+} */
+
 nav .btn__mode {
   grid-area: 1 / 3 / 2 / 4;
   /**/
   text-align: center;
 }
 
-nav .nav__list a::before {
+/* nav .nav__list a::before {
   padding: 0 2rem;
   font-size: 2rem;
   color: var(--button-bg);
-  /* content: "|"; */
-}
+} */
 /* nav .nav__list a:last-of-type::after {
   padding: 0 1rem;
   content: "";
