--- a/src/statics/css/sideMenu.css
+++ b/src/statics/css/sideMenu.css
@@ -51,21 +51,20 @@
   background-color: var(--text-em);
   font-size: 2rem;
   color: var(--button-bg);
-  transition: width 0.8s ease;
+  transition: width 0.4s ease;
 }
 .nav__list .nav-item:nth-child(3):before {
   padding: 0 42px;
 }
 .nav__list .nav-item:nth-child(4):before {
   padding: 0 2.15rem;
-  transition: width 0.3s ease;
 }
 .nav__list .nav-item:hover:before {
-  width: 100%;
-}
-.nav__list .nav-item:nth-child(4):hover:before {
   width: 40%;
 }
+/* .nav__list .nav-item:nth-child(4):hover:before {
+  width: 40%;
+} */
 .nav__list .nav-item.active {
   color: var(--text-em);
 }
